refactor: init task creator structure
